client/src/styles/Techs.module.css
.block {
    margin-top: 22px;
    width:auto;
    height: 150px;
    background-color: rgb(52,170,210);
}

.techTitle {
    padding: 10px;
}

.logos {
    width:100px;
    height:auto;
    padding: 8px 20px;
}

.descBlock {
    padding: 25px;
    margin: auto;
    display: flex;
    align-items: center;
    justify-content: center;
}

.descBlock1 {
    background-color: aliceblue;
}

.descBlock2 {
    background-color: beige;
}

.descBlock3 {
    background-color: wheat;
}

.descInfo {
    width: 350px;
}

.langDescription {
    width: 350px;
}

